--- a/GmailApp/src/giaoDienApp/newLogin.form
+++ b/GmailApp/src/giaoDienApp/newLogin.form
@@ -117,7 +117,7 @@
                   <Color blue="ed" green="e9" red="a1" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Bodoni MT Black" size="24" style="1"/>
+                  <Font name="Consolas" size="24" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="login"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
