--- a/GmailApp/src/giaoDienApp/newMainPage.form
+++ b/GmailApp/src/giaoDienApp/newMainPage.form
@@ -99,6 +99,9 @@
               <Image iconType="3" name="/img/cancel_30px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value=" Cancel"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cancel_LbMouseClicked"/>
@@ -122,6 +125,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value=" Send"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="send_LbMouseClicked"/>
@@ -307,6 +313,7 @@
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
       <Point value="[0, 0]"/>
     </Property>
+    <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
