--- a/GmailApp/src/giaoDienApp/newMainPage.form
+++ b/GmailApp/src/giaoDienApp/newMainPage.form
@@ -356,13 +356,13 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="mailBox_Pn" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="mail_Pn" min="-2" pref="611" max="-2" attributes="0"/>
+                      <Component id="mail_Pn" min="-2" pref="620" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="dynamic_option_read_writeMenu_Pn" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
-          <Component id="menu_Pn" alignment="0" max="32767" attributes="0"/>
+          <Component id="menu_Pn" alignment="0" pref="770" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -868,10 +868,16 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/img/search_32px.png"/>
             </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="searchIcon_LbMouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="10" width="-1" height="-1"/>
+              <AbsoluteConstraints x="230" y="10" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -886,7 +892,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="60" y="10" width="210" height="30"/>
+              <AbsoluteConstraints x="10" y="10" width="210" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -898,7 +904,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="60" y="40" width="210" height="10"/>
+              <AbsoluteConstraints x="10" y="40" width="210" height="10"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -958,7 +964,7 @@
                   <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" max="32767" attributes="0"/>
               </Group>
-              <Component id="jSeparator8" min="-2" pref="270" max="-2" attributes="0"/>
+              <Component id="jSeparator8" alignment="1" min="-2" pref="270" max="-2" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -969,9 +975,10 @@
                       <Component id="reload_Bt" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="countMailLoading_Lb" min="-2" pref="50" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jSeparator8" min="-2" pref="10" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="620" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jSeparator8" min="-2" pref="4" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
               </Group>
           </Group>
